tests/ui/pattern/usefulness/issue-30240-b.stderr
error: unreachable pattern
  --> $DIR/issue-30240-b.rs:12:9
   |
LL |         "hello" => {}
   |         ------- matches all the relevant values
LL |         "hello" => {}
   |         ^^^^^^^ no value can reach this
   |
note: the lint level is defined here
  --> $DIR/issue-30240-b.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

